package com.wali.live.watchsdk.bigturntable;

import com.wali.live.proto.BigTurnTableProto;

/**
 * Created by zhujianning on 18-7-11.
 */

public class TurnTableType {
    public static final BigTurnTableProto.TurntableType MODE_SMALL = BigTurnTableProto.TurntableType.TYPE_128;
    public static final BigTurnTableProto.TurntableType MODE_BIG = BigTurnTableProto.TurntableType.TYPE_500;
}
